# DGTCentaurMods

./: .envrc  .gitignore  CHANGELOG.md  DISPLAY_FIXES.md  EPAPER_REFACTOR_SUMMARY.md  FUNCTIONAL_IMPROVEMENTS.md  GAMEMANAGER_IMPROVEMENTS.md  README.md  THIRD_PARTY_NOTICES.md  build-info.md  test_display_blocking.py  tox.ini
.github/legacy-ci/: README.md
.github/workflows/: build-engines.yml  build.yml  nightly.yml  release.yml  test.yml
DGTCentaurMods/DEBIAN/: control  postinst  postrm  prerm
DGTCentaurMods/opt/: maia_weights.sh  run.sh  setup.sh  test.sh  test_promotion.sh  test_serial_helper.py
docs/: architecture.md  bluez-gatt-bug-report.md  releasing.md
docs/epaper/: 01_audit.md  02_design.md  03_industry_standards_evaluation.md  alternative_drivers.md  (+13 more)
scripts/: README.md  TODOS.md  build-info.md  build.sh  bump-version.sh  check-updates.sh  probe.sh  proxy_original.sh  rebuild.sh  release.sh  run-react.sh  run-web.sh  run.sh  test-web.sh
tools/: ble_client_analysis.py  chessnut_ble_client_analysis.py  chessnut_ble_proxy.py  millennium_rfcomm_client_analysis.py  pegasus_ble_client_analysis.py  pegasus_ble_proxy.py  sniffer_chessnut_ble.py  sniffer_millennium_ble.py  sniffer_millennium_rfcomm.py  sniffer_pegasus_ble.py
tools/dev-tools/proxies/firmware/millennium/: CMakeLists.txt  README.md  prj.conf
tools/dev-tools/proxies/firmware/millennium/boards/: nrf52840dongle.overlay
tools/dev-tools/proxies/firmware/millennium/src/: ble_central.c  ble_central.h  ble_peripheral.c  ble_peripheral.h  main.c  protocol.c  protocol.h  usb_console.c  usb_console.h
(+702 files in other folders)
